# 5-dbus-tqt

./: README.md  tde-dbus-tqt.spec
.gear/: rules
tde-dbus-tqt/: CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  INSTALL  NEWS  connection.cpp  connection.h  dbus-qt.h  dbus-qthread.cpp  dbus-tqt.pc.cmake  integrator.cpp  integrator.h  message.cpp  message.h  server.cpp  server.h
